--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-paginate": "^6.3.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "typescript": "~3.7.2"
   },
@@ -42,6 +43,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.158",
-    "@types/react-paginate": "^6.2.1"
+    "@types/react-paginate": "^6.2.1",
+    "@types/react-router-dom": "^5.1.5"
   }
 }
